--- a/compose.yaml
+++ b/compose.yaml
@@ -6,8 +6,8 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: vendas123
-      POSTGRES_USER: uservendas
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
       POSTGRES_DB: vendas
     volumes:
       - postgre_docker_vol:/var/lib/postgresql/data
@@ -15,7 +15,7 @@ services:
       - vendas
 volumes:
   postgre_docker_vol:
-    name: postgre_vol
+    name: postgre_vendas_nest_vol
 
 networks:
   vendas:
